fix: 블록체인 포스트 이미지 수정 완료
- Front matter의 image 필드를 올바른 포스트 이미지로 변경
- 본문에서 중복된 이미지 제거하여 헤더 이미지만 표시되도록 수정
- 포스트 헤더에 올바른 메인 이미지가 표시되도록 개선

--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,13 @@ plugins:
   - jekyll-sitemap
   - jekyll-seo-tag
 
+# Feed Settings
+feed:
+  path: feed.xml
+  excerpt_only: false
+  categories: true
+  tags: true
+
 # Permalinks - Clean URL structure
 permalink: /posts/:year/:month/:title/
 
@@ -113,6 +120,13 @@ navigation:
 # SEO & Security
 twitter:
   card: "summary_large_image"
+  username: "@Twodragon0"  # Twitter username (if available)
+
+# Open Graph & Social Sharing
+# 기본 이미지는 SVG로 생성되며, PNG로 변환하려면 scripts/generate_og_image.py 실행
+og_image: "/assets/images/og-default.png"  # Default Open Graph image for social sharing (PNG 권장)
+og_image_width: 1200
+og_image_height: 630
 
 social:
   name: "Twodragon"
