feat: 수동 sitemap.xml 생성 및 설정 개선
- 수동 sitemap.xml 템플릿 생성 (priority, changefreq 동적 설정)
- 포스트 최신성에 따른 priority/changefreq 자동 조정
- 정적 페이지, 카테고리, 태그 페이지 포함
- sitemap 설정 가이드 문서 추가 (README_SITEMAP.md)
- _config.yml에 sitemap 설정 추가

--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,15 @@ feed:
   categories: true
   tags: true
 
+# Sitemap Settings
+sitemap:
+  # jekyll-sitemap 플러그인은 자동으로 작동하지만,
+  # 수동 sitemap.xml 파일이 있으면 우선순위가 높습니다
+  exclude: false
+  include_posts: true
+  include_pages: true
+  include_categories: true
+
 # Permalinks - Clean URL structure
 permalink: /posts/:year/:month/:title/
 
