Fix Vercel build and add optimization settings
- Clean _site before build to prevent cleaner conflicts
- Add security headers (X-Content-Type-Options, X-Frame-Options)
- Add cache headers for static assets (1 year)
- Enable clean URLs and trailing slash
- Exclude unnecessary files from Jekyll build
- Specify Ruby version in Gemfile

--- a/_config.yml
+++ b/_config.yml
@@ -152,6 +152,15 @@ exclude:
   - .gitignore
   - README.md
   - LICENSE
+  - vercel.json
+  - .vercel
+  - "*.md"
+  - scripts/
+
+# Build optimization
+keep_files: []
+incremental: false
+safe: false
 
 # Sass (not used - using CSS directly)
 # sass:
