Fix Vercel build: include Gemfile.lock
- Remove Gemfile.lock from .gitignore for consistent builds
- Add Ruby version to Gemfile.lock
- Simplify vercel.json build commands

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "framework": null,
-  "buildCommand": "rm -rf _site .jekyll-cache && LANG=en_US.UTF-8 LC_ALL=en_US.UTF-8 BUNDLE_SILENCE_ROOT_WARNING=1 bundle exec jekyll build --trace",
+  "buildCommand": "LANG=en_US.UTF-8 LC_ALL=en_US.UTF-8 bundle exec jekyll build",
   "outputDirectory": "_site",
-  "installCommand": "gem install bundler && bundle config set --local path 'vendor/bundle' && bundle install --jobs 4 --retry 3",
+  "installCommand": "bundle install",
   "build": {
     "env": {
       "LANG": "en_US.UTF-8",
