Fix posts not showing: remove *.md from exclude
- Remove '*.md' from exclude list that was hiding all posts
- Remove Ruby version constraint from Gemfile.lock for Vercel compatibility

--- a/_config.yml
+++ b/_config.yml
@@ -154,8 +154,8 @@ exclude:
   - LICENSE
   - vercel.json
   - .vercel
-  - "*.md"
   - scripts/
+  - "*.log"
 
 # Build optimization
 keep_files: []
