--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site Settings
 title: "Twodragon's Tech Blog"
 description: "DevSecOps, DevOps, FinOps 전문 기술 블로그 - 클라우드 보안, 인프라 자동화, 비용 최적화의 실무 경험과 최신 트렌드"
-url: "https://Twodragon0.github.io"
-baseurl: "/tech-blog"
+url: "https://tech.2twodragon.com"
+baseurl: ""
 lang: "ko"
 logo: "/assets/images/logo.png"
 keywords: "DevSecOps, DevOps, FinOps, Cloud Security, Kubernetes, AWS, 보안, 클라우드, 인프라"
