feat: 코드 블록 문법 강조 및 UI/UX 개선
- Rouge 문법 강조 설정 추가 (_config.yml)
- 코드 블록 스타일 개선 (배경색, 테두리, 그림자, 호버 효과)
- 언어 자동 감지 및 표시 헤더 추가
- 코드 복사 버튼 스타일 및 기능 개선
- 라이트/다크 모드 문법 강조 색상 테마 개선
- 스크롤바 스타일링 및 반응형 디자인 개선

--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,13 @@ author:
 # Build Settings
 markdown: kramdown
 highlighter: rouge
+kramdown:
+  syntax_highlighter: rouge
+  syntax_highlighter_opts:
+    block:
+      line_numbers: false
+    span:
+      line_numbers: false
 theme: null
 plugins:
   - jekyll-feed
