fix: Giscus URL 이중 인코딩 문제 및 favicon 경로 수정
- Giscus mapping을 pathname에서 title로 변경하여 한글 URL 이중 인코딩 문제 해결
- giscus.html에 data-term 속성 추가하여 포스트 제목 직접 사용
- favicon 경로를 relative_url에서 absolute_url로 변경하여 404 에러 해결

--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ giscus:
   repo_id: "R_kgDOQ1zGAg"  # GitHub GraphQL Repository ID
   category: "Announcements"
   category_id: "DIC_kwDOQ1zGAs4C0tYD"  # GitHub Discussions Category ID
-  mapping: "pathname"
+  mapping: "title"  # Changed from "pathname" to avoid double URL encoding with Korean characters
   reactions_enabled: "1"
   emit_metadata: "0"
   input_position: "bottom"
