fix: 채팅 위젯 타임아웃 문제 해결 및 성능 개선
- 서버 타임아웃: 8초 → 9초 (프리티어 제한 내 최대화)
- 클라이언트 타임아웃: 10초 → 12초
- max_tokens: 1500 → 1200 (응답 시간 단축)
- 시스템 프롬프트 개선: 간결한 답변 요청
- 재시도 버튼 추가 (네트워크 오류 시)
- 에러 메시지 개선 (타임아웃, 504 오류)
- top_p 파라미터 추가 (응답 최적화)
- 문제 해결 가이드 문서 추가

--- a/vercel.json
+++ b/vercel.json
@@ -69,5 +69,11 @@
       "maxDuration": 10,
       "memory": 1024
     }
-  }
+  },
+  "rewrites": [
+    {
+      "source": "/api/chat",
+      "destination": "/api/chat.js"
+    }
+  ]
 }
