--- a/vercel.json
+++ b/vercel.json
@@ -74,6 +74,10 @@
     {
       "source": "/api/chat",
       "destination": "/api/chat.js"
+    },
+    {
+      "source": "/api/chat/",
+      "destination": "/api/chat.js"
     }
   ]
 }
