security: API 키 노출 제거 및 .gitignore 강화
- 문서에서 DeepSeek API 키 제거 (README_CHAT_WIDGET.md, VERCEL_ENV_SETUP.md)
- .gitignore 강화 (.env.* 패턴 추가)
- API 키 및 민감 정보 파일 패턴 추가
- 보안 모범 사례 적용

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,21 @@ vendor/
 .env
 .env.local
 .env.*.local
+.env.production
+.env.development
+.env.test
+*.env
 *.key
 *.pem
 secrets/
 .vercel
+
+# API Keys and sensitive data (보안)
+**/DEEPSEEK_API_KEY
+**/OPENAI_API_KEY
+**/GEMINI_API_KEY
+**/*_API_KEY
+**/*_SECRET
+**/*_TOKEN
+**/credentials.json
+**/service-account*.json
