--- a/.github/workflows/sns-share.yml
+++ b/.github/workflows/sns-share.yml
@@ -1,14 +1,20 @@
 name: Share to SNS
 
+# SNS 공유 워크플로우
+# Free 티어 최적화: 조건부 실행, 타임아웃 설정
+
 on:
   push:
     branches: [main]
     paths:
-      - '_posts/**'
+      - '_posts/**' # 포스트 변경 시에만 실행
 
 jobs:
   share:
     runs-on: ubuntu-latest
+    # 타임아웃 설정 (무한 실행 방지)
+    timeout-minutes: 10
+    
     permissions:
       contents: read
       actions: read
