chore: 중복 문서 제거 및 .gitignore 업데이트
- TROUBLESHOOTING_CHAT.md 제거 (CHAT_API_TROUBLESHOOTING.md로 통합)
- DEEPSEEK_API_CHECK.md 제거 (일회성 체크 문서)
- .gitignore에 로그 파일 패턴 추가 (*.pid, *improvement*.log, *improvement*.txt)

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,13 @@ vendor/
 .bundle/
 .vercel/
 *.log
+*.pid
+*_improvement*.log
+*_improvement*.txt
+improvement*.log
+improvement*.txt
+ai_improvement*.log
+ai_improvement*.txt
 .DS_Store
 
 # Environment variables and secrets
@@ -30,3 +37,4 @@ secrets/
 **/*_TOKEN
 **/credentials.json
 **/service-account*.json
+.env*.local
