feat: Gemini AI Pro 및 OAuth 2.0 통합, 비용 최적화 및 보안 강화
- Gemini AI Pro 적극 활용: 대본 생성 및 개선 기능 추가
- OAuth 2.0 지원: Google Cloud 서비스 계정 기반 인증
- Gemini CLI 통합: OAuth 2.0 지원 CLI 옵션 추가
- 비용 최적화: API 선택 전략, 캐싱, 사용량 모니터링
- 보안 강화: 민감 정보 마스킹, 환경 변수 기반 설정
- 문서화: 통합 가이드, 비용 최적화 가이드, OAuth 설정 가이드 추가
- .env.example 업데이트: 모든 API 키 및 OAuth 설정 포함

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,57 @@ TWITTER_ACCESS_SECRET=
 
 FACEBOOK_PAGE_ID=
 FACEBOOK_ACCESS_TOKEN=
+
+# ============================================
+# Audio/Video Generation API Keys
+# ============================================
+
+# ElevenLabs API (Required for audio generation)
+ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
+ELEVENLABS_VOICE_ID=your_voice_id_here
+
+# DeepSeek API (Optional, for script generation)
+DEEPSEEK_API_KEY=sk-your_deepseek_api_key_here
+
+# Gemini API (Optional, for script generation and improvement)
+GEMINI_API_KEY=your_gemini_api_key_here
+
+# ============================================
+# Google Cloud OAuth 2.0 (Recommended)
+# ============================================
+# Use service account for secure authentication
+# Download service account key from Google Cloud Console
+# See scripts/GEMINI_OAUTH_SETUP.md for detailed instructions
+
+# Google Cloud Service Account Credentials
+# Path to the service account key JSON file
+GOOGLE_APPLICATION_CREDENTIALS=/path/to/your-service-account-key.json
+
+# Google Cloud Project ID
+# Replace with your actual project ID
+GOOGLE_CLOUD_PROJECT=your-project-id-here
+
+# Enable OAuth 2.0 for Gemini API (recommended)
+USE_GEMINI_OAUTH=true
+
+# ============================================
+# API Selection Strategy
+# ============================================
+
+# Prefer Gemini AI Pro (default: true)
+PREFER_GEMINI=true
+
+# Use Gemini CLI (default: false, requires npm install -g @google/gemini-cli)
+USE_GEMINI_CLI=false
+
+# Use DeepSeek for script generation (default: true)
+USE_DEEPSEEK_FOR_SCRIPT=true
+
+# Use Gemini for script generation (default: true)
+USE_GEMINI_FOR_SCRIPT=true
+
+# Use Gemini for script improvement (default: true)
+USE_GEMINI_FOR_IMPROVEMENT=true
+
+# Enable caching (default: true)
+ENABLE_CACHING=true
