chore: Python 캐시 파일을 .gitignore에 추가
- __pycache__ 디렉토리 제외
- *.pyc, *.pyo 파일 제외
- 이미 커밋된 캐시 파일 제거

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,13 @@ secrets/
 # Gemini OAuth service account keys
 gemini-service-key.json
 *-service-key.json
+
+# Python cache files
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
 **/*_API_KEY
 **/*_SECRET
 **/*_TOKEN
